fixed link wrap issue

--- a/src/client/scss/vmware/components/content-blocks.scss
+++ b/src/client/scss/vmware/components/content-blocks.scss
@@ -1197,6 +1197,13 @@ text-decoration: underline;
 
   .card {
     min-height: 100%;
+    .card-text{
+      a{
+        display: inline;
+        white-space: initial;
+        word-break: break-word;
+      }
+    }
   }
 
   &.theme-content-block-gray {
